# Axiom

./: .gitignore  Anchor.toml  Cargo.toml  README.md  copilot_token.txt
app/: README.md  lint_output.txt  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/dashboard/: dashboard.module.css  page.tsx
app/src/app/docs/: docs.module.css  page.tsx
app/src/app/explorer/: explorer.module.css  page.tsx
app/src/app/playground/: page.tsx  playground.module.css
app/src/components/: FeaturesGrid.module.css  FeaturesGrid.tsx  Footer.module.css  Footer.tsx  HeroSection.module.css  HeroSection.tsx  HowItWorks.module.css  HowItWorks.tsx  LiveInferenceVisual.module.css  LiveInferenceVisual.tsx  Navbar.module.css  Navbar.tsx  NetworkBackground.module.css  NetworkBackground.tsx  PlaygroundPreview.module.css  PlaygroundPreview.tsx  StatsBar.module.css  StatsBar.tsx  WalletProvider.tsx
app/src/contexts/: NetworkContext.tsx
app/src/idl/: axiom.json
app/src/lib/: ipfs.ts
app/src/program/: client.ts  types.ts
node-runner/: README.md  index.ts  package-lock.json  package.json
programs/Axiom/: Cargo.toml
programs/Axiom/src/: errors.rs  lib.rs  state.rs
programs/Axiom/src/instructions/: cancel_job.rs  commit_result.rs  initialize.rs  mod.rs  post_job.rs  register_node.rs  reveal_result.rs  settle_job.rs
scripts/: init_market.ts
