[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin crates that have edition2024 versions incompatible with Solana's cargo
[workspace.dependencies]
block-buffer = "=0.10.4"
